[gd_scene load_steps=6 format=2]

[ext_resource path="res://Battle/HUD/ShineLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Player Health Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/BattleAssets/HUD/Chip Splashes/schip002.png" type="Texture" id=3]
[ext_resource path="res://Assets/BattleAssets/HUD/VictoryScreen.png" type="Texture" id=4]
[ext_resource path="res://Battle/HUD/BattleResults/BattleResults.gd" type="Script" id=5]

[node name="BattleResults" type="Sprite"]
position = Vector2( 24, 17 )
texture = ExtResource( 4 )
centered = false
vframes = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeleteTime" parent="." instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 22.0
margin_right = 168.0
margin_bottom = 38.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
text = "0:09:23"
label_text = "0:09:23"

[node name="BustingLv" parent="." instance=ExtResource( 1 )]
margin_left = 112.0
margin_top = 46.0
margin_right = 168.0
margin_bottom = 62.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
text = "S"
label_text = "S"

[node name="ChipSplash" type="Sprite" parent="."]
position = Vector2( 140, 95 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ChipName" type="Label" parent="."]
margin_left = 24.0
margin_top = 97.0
margin_right = 104.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.25098 )
text = "Bubbler  P"
__meta__ = {
"_edit_use_anchors_": false
}
